--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,22 @@
         });
 
         function main() {
-            $("#disp1").html("Hello, JavaScript!");
+            var msg = "Hello,JavaScript!";
+            msg += "<br>";
+            msg += "This is Monaca";
+            $("#disp1").html(msg);
+
+            var a=0;
+            var txt="";
+            txt += "a: " + a + "<br>";
+            if (a=1) {
+            txt += "TRUE<br>";
+            } else {
+            txt += "FALSE<br>";
+            }
+            txt += "a: " + a +"<br>";
+
+            $("#disp2").html(txt);
         }
     </script>
 </head>
