--- a/www/index.html
+++ b/www/index.html
@@ -16,22 +16,25 @@
         });
 
         function main() {
-            var a = new Array(3);
-            a[0]=10; a[1]=50; a[2]=30;
-            var msg="";
-            for(let i=0;i<a.length;i++) {
-            msg += i + ":" +
-            a[i] + "<br>";
+           let a = [10, "50", 30.3];
+
+            a.push(4.5); 
+            a.unshift("zero"); 
+            let msg="";
+             for(let i=0; i<a.length; i++) {   
+                  msg += i+ ":" + a[i] + "<br>";
             }
             $("#disp1").html(msg);
 
-            var a=[100,20,-5];
-            var msg="";
-            for(let i = 0;i<a.length;i++){
-                msg += i + ":"+
-                      a[i] + "<br>";
-            }
-            $("#disp2").html(msg);
+           let p = a.pop(); 
+           let s = a.shift();
+            let msg2=""; for(let i=0; 
+            i<a.length; i++) { 
+                msg2 += i+ ":" + (a[i]+2) + "<br>";
+             } 
+          msg2 += "p:" + p + "<br>";
+          msg2 += "s:" + s + "<br>";
+         $("#disp2").html(msg2);
         }
     </script>
 </head>
